Update 'Strategic Account Leader' to 'Strategic Account Executive'

--- a/culture/inclusion/erg-minorities-in-tech/mentoring/projects/2020/index.html.md.erb
+++ b/culture/inclusion/erg-minorities-in-tech/mentoring/projects/2020/index.html.md.erb
@@ -35,7 +35,7 @@ This year our Mentor / Mentee pairs collaborated on the following projects:
 
 ### Sales
 
-- [Increasing newly hired SAL's performance and reducing their churn](https://docs.google.com/presentation/d/14OJ7ggFNqh7mcJwzJ2imBVjERvXe-O6XrbiNB3zX6sg/edit?usp=sharing)
+- [Increasing newly hired SAE's performance and reducing their churn](https://docs.google.com/presentation/d/14OJ7ggFNqh7mcJwzJ2imBVjERvXe-O6XrbiNB3zX6sg/edit?usp=sharing)
 - [A cross fuctional shadow program for leadership development](https://docs.google.com/presentation/d/1p4D3460G-Vas_FGmN0Oiyx_My0UxocylHjy83sjGTz8/edit?usp=sharing)
 - [LATAM Growth and expansion plan](https://docs.google.com/presentation/d/1JkyJn9hRJCCkN1kqJS8xTMo0foTmSrLvzi73CAodmUQ/edit?usp=sharing)
 - [Creating a GitLab customer referral program](https://docs.google.com/presentation/d/1cGa7d99bApWN2sd9gVq4jtrK05TUGB_61F_QpCSfYx0/edit?usp=sharing) (**WINNER**)
