Add context on when PMs would need to contribute to community contributions

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -209,7 +209,7 @@ As a result contributions from the wider community and from other teams in GitLa
 described below nor are they prioritized by GitLab Product Managers. So long as an MR matches
 the [definition of done](https://docs.gitlab.com/ee/development/contributing/merge_request_workflow.html#definition-of-done), changes may make their way into Product.
 
-Product Managers are encouraged to engage with contributors and vice-versa to learn from each other. As an open source product we want to enable everyone to contribute. We don't want the engagement to be confused with a requirement to get permission.
+Product Managers are encouraged to engage with contributors and vice-versa to learn from each other. As an open-source product we want to enable everyone to contribute. We don't want the engagement to be confused with a requirement to get permission. There are times when a Product Manager may need to provide advisement on compatibility with the JTBD, future direction, integration with other providers, changes to navigation, and impacts to GitLab operating expenses.  It's recommended that they collaborate with their stable counterparts (Engineering Manager or Product Designer) to determine how best to proceed in these cases.
 
 ### Managing your Product Direction
 
