Document how complexity based weight relates to velocity

--- a/development/ops/deploy/environments/index.html.md.erb
+++ b/development/ops/deploy/environments/index.html.md.erb
@@ -145,6 +145,14 @@ issue will be scheduled for work before any further breakdown of tasks is perfor
 
 Not all POCs will be successful, and that is OK! Some avenues of research may not be successful, and the POC will have saved us from investing significant time in a solution that will not meet our needs. The goal is early feedback and fast iteration.
 
+##### Weight, Velocity, and Planning
+
+We intentionally leave the term "velocity" undefined and do not use it in planning workload capacity for the team.
+
+We leave the question of interpreting summed weights open to each unique situation.
+
+When making decisions about how much work the team can take on for a milestone, we trust individual impressions and instincts reflected in the discussions that take place in the planning issue and the refinement process. The weighting system helps foster these discussions.
+
 ### GitLab Terraform Provider
 
 The [GitLab Terraform Provider](/handbook/engineering/projects/#terraform-provider-gitlab) is managed by the Environments group.
