Add Automating ECS Deployments with GitLab CI/CD video to content calendar

--- a/customer-success/solutions-architects/sa-content/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-content/index.html.md.erb
@@ -36,7 +36,7 @@ This is not meant to limit creativity. It's a [boring](/handbook/values/#boring-
 | 2023-02-06   | [Jeremy Wagner](https://gitlab.com/jeremywagner)  | How to deploy a React application to AWS S3 using GitLab |              |
 | 2023-02-20   | [Julie Byrne](https://gitlab.com/juliebyrne)      | Getting Started with GitLab Security                     | Blog         |
 | 2023-02-27   | [Noah Ing](https://gitlab.com/noah.ing)           | Terraform Multi Environments with GitLab                 |              |
-| 2023-03-06   | [Siddharth Mathur](https://gitlab.com/smathur-gl) |                                                          |              |
+| 2023-03-06   | [Siddharth Mathur](https://gitlab.com/smathur) | [Automating Deployments to ECS with GitLab CI/CD](https://youtu.be/Grc_5v4rOFI) | Video        |
 | 2023-03-13   | [Sophia Manicor](https://gitlab.com/smanicor)     |                                                          |              |
 | 2023-03-20   | [Sam Morris](https://gitlab.com/sam)              | CI and Secure in Mono-Repos                              |              |
 | 2023-03-27   | [Michael Balzer](https://gitlab.com/mbalzer)      |                                                          |              |
