Update VSA handbook page to additional step to SFDC tracking, attach update executive briefing template and update role specific requirements

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -41,11 +41,6 @@ Value stream assessments require a non-trivial investment of time by both the Gi
 - We have identified and established a relationship with the [champion](https://about.gitlab.com/handbook/sales/meddppicc/#champion)
 - We suggest pitching a Value Stream Assessment prior to POVs (Proof of Value) to understand bottlenecks, key metrics important to stakeholder. This also gives us an opportunity to agree to the success criterias before starting the POV as value drivers for deal closure.
 
-In case a Value Stream Assessment is conducted by a customer success manager (CSM), the following criteria should be met:
-- We have a strong relationship with the executive sponsor
-- We have identified and established a relationship with the champion
-- The account has a total addressable market of at least 1000 GitLab users
-- The customer has expressed a strong desire to improving their software delivery performance
 
 Key indicators that the opportunity is well-suited include:
 
@@ -96,7 +91,6 @@ This gives the team at GitLab the ability to both track the progress of the Valu
 
 It is extremely important to have an internal preparation meeting (can be async) prior to pitching a Value Stream Assessment to the customer. The goal of the meeting is to be able to discuss:
 - The opportunity (should include SFDC link for SA engagement)
-   - The opportunity for a CSM lead Value Stream Assessment could be to expand into a new stage, rather than it being a financial opportunity in SFDC.
 - The key players & their roles
 - What metrics are these key players measured by
 - Any OKRs for these key players that the account team is aware of
@@ -153,7 +147,7 @@ Without the answers to these questions we risk spending significant time and ene
 
 | Role    | Responsibilities | GitLab Roles |
 | -------- | ------- |------- |
-| Scribe(s)  |A team member who's primary purpose is to document the session, capture key metrics as they emerge which will later be used to create a Value Stream Map. |  AE, Shadow SA, CSM |
+| Scribe(s)  |A team member who's primary purpose is to document the session, capture key metrics as they emerge which will later be used to create a executive briefing template. |  AE, Shadow SA, CSM |
 | Facilitator |A team member fully versed in the Value Stream Mapping process who is responsible for leading the session; ensuring that discussion is staying on-topic, at the right level and at the required pace.    |  SA |
 | Account Leader |Ensure that the long term strategic vision for the prospect is considered when discussing desired future state and they can also provide additional context to the current state.  Schedule meetings with the Value Stream Assessment participants.  Send summary followup emails after each session ([template](https://docs.google.com/document/d/1Aq9J8akzXOngW2vP4GmObviZDP1lo9uRvbEl4ytxgQM/edit))Update VSA Tracking fields in Salesforce.| AE |
 
@@ -184,7 +178,7 @@ The process which we will go through, at a high level, is as follows  (per funct
 #### Tools
 
 - Remote:
-    - [Google Sheets - Lite Value Stream Mapping Template](https://docs.google.com/spreadsheets/d/1ioMIf_wV95mGUwjHezjT3zOTkEeG_gEnKanVS4hJB0k/edit?usp=sharing)
+    - [Google Sheets - Value Stream Mapping Template](https://docs.google.com/spreadsheets/d/1ioMIf_wV95mGUwjHezjT3zOTkEeG_gEnKanVS4hJB0k/edit?usp=sharing)
     - Zoom, MS Teams, or Google Meet
     - LucidChart for Value Stream Map visulization
       - LucidChart is an IT-managed application. If you are unsure if you have LucidChart access, go to the Okta interface in your browser, then select "Search Your Apps" and see if `LucidChart SSO` is available. If yes, LucidChart has been assigned to you and you can launch it from Okta and collaborate on any LucidChart Documents your team has shared with you. If no, then `LucidChart SSO` has not been assigned to you yet.
@@ -225,7 +219,7 @@ The final meeting as part of the Value Stream Assessment process is the findings
 1. Walkthrough and gain agreement for the transformation plan. The transformation plan should be built in conjunction with professional services to yield best results. Please read how to position professional services in an opportunity [here](https://about.gitlab.com/handbook/customer-success/solutions-architects/processes/#positioning-professional-services)
 1. Define next steps and suggest a review date
 
-Example template of the executive briefing can be found [here](https://docs.google.com/presentation/d/133mECaV2vfUQGIn03mixXSI6ENrc4T-R_vRwXBRManA/edit?usp=sharing). Please modify accordingly to suit your customer's need.
+Example template of the executive briefing can be found [here](https://docs.google.com/presentation/d/130KJLxGJlVxU0CiuofLwaPV7rV-_uEC31FV8xf62mCg/edit?usp=sharing). Please modify accordingly to suit your customer's need.
 
 It is recommended to review the executive briefing with your champion, key stakeholder before the final meeting to collect additional feedback. The goal is to then deliver it jointly to the broader team to gain agreement.
 
@@ -275,7 +269,7 @@ The Account Leader (AE) is responsible for maintaining the Salesforce opportunit
 - **VSA Start Date** - Date of the VSA kickoff call with the prospect/customer.(This is the first meeting with the prospect/customer, after they've committed to do a VSA, to discuss [planning of the VSA workshop](#planning-meeting-with-customer).)  
 - **VSA End Date** - The date the VSA readout is presented to the prospect/customer or the date of the last meeting with the prospect if the VSA status is set to "Stalled."
 - **VSA Status** - The status of the VSA where
-  - **Planning** - Internal qualification and planning is occuring.  VSA start date should not be set when this status is set.
+  - **Planning** - Internal qualification and planning is occuring.  Please remove the status if it becomes unqualified during this step. VSA start date should not be set when this status is set.
   - **Pitched** - We've positioned a VSA with the prospect/customer.  VSA start date should not be set when this status is set.
   - **Accepted** - When the customer has agreed to do a VSA and has scheduled a kickoff call.  VSA start date should not be set when this status is set.
   - **In-process** - We've had a kickoff call, are actively facilitating the VSA, or are compiling the result for the readout.
