--- a/infrastructure/index.html.md.erb
+++ b/infrastructure/index.html.md.erb
@@ -107,7 +107,7 @@ Every scheduled team meeting _must_ have a Google Doc agenda attached to the inv
 Meetings may have multiple topics. For each topic there should be one meeting. This helps to prevent conflicting information and inefficient duplication. Some meetings may deliberately be scheduled to occur twice to better include all global participants, but this is considered to be the _same_ meeting, just held at two times.
 
 |**Topics**|**Meeting**|**Participants**|**Cadence**|
-|Incident Review and followup|[Incident Review](https://docs.google.com/document/d/1Llm9tXHC2dNt_eercRUUXlUyWmOVw00wmXWQQbWvv2c/edit#) (internal only)|All Engineering|Tues|
+|Incident Review and followup|[Incident Review](https://docs.google.com/document/d/1jrX-Z2NJrNjBBcywY7emQKwaKRqVAlDRdGG0Krk76ys/) (internal only)|All Engineering|Tues|
 |Infrastructure Performance Indicator Review|[Infrastructure Key Meeting](https://docs.google.com/document/d/1YYWwdu2dw-ooXXQGW3PddA0TOvwoSvVHmNN3BNoLE2U/edit) (internal only)|Eng VP Staff, Finance & Exec leadership|Monthly|
 |What's Happening in Infrastructure|[Infrastructure Group Conversation](https://docs.google.com/document/d/1zELoftrommhRdnEOAocE6jea6w7KngUDjTUQBlMCNAU/edit?usp=sharing) (internal only)|All Company|Quarterly|
 |Practical exercises to improve team capabilities|[Firedrills](https://docs.google.com/a/gitlab.com/document/d/1mppLPq4beUawcvde_N3GvxM--vSdFriYbdRdTR4zrGY/edit?usp=drive_web) (internal only)|All Infra|Weds|
