Add GitLab Direct Transfer Kibana dashboard to Import page

--- a/development/dev/manage/import/index.html.md.erb
+++ b/development/dev/manage/import/index.html.md.erb
@@ -220,6 +220,7 @@ The following people are permanent members of the group:
   - [Project Import/Export - Overview](https://log.gprd.gitlab.net/app/dashboards#/view/03a11c50-ba46-11ec-b73f-692cc1ae8214)
   - [GitHub Import - Overview](https://log.gprd.gitlab.net/app/dashboards#/view/62965d10-9c0e-11ed-9f43-e3784d7fe3ca)
   - [GitHub Import - Project import debug](https://log.gprd.gitlab.net/app/dashboards#/view/be0fb6d0-9c24-11ed-85ed-e7557b0a598c)
+  - [GitLab Direct Transfer - Overview](https://log.gprd.gitlab.net/app/dashboards#/view/f2640580-a8bd-11ed-85ed-e7557b0a598c)
 
 ## Links and resources
 {: #links}
