Update link to point to current milestones issue board

--- a/development/analytics/product-intelligence/index.html.md.erb
+++ b/development/analytics/product-intelligence/index.html.md.erb
@@ -113,7 +113,7 @@ To keep things simple, we primarily use the [gitlab.com/gitlab-org](https://gitl
 We use issue boards to track issue progress on a daily basis. Issue boards are our single source of truth for the status of our work. Issue boards should be viewed at the highest group level for visibility into all nested projects in a group.
 
 * [**Product Intelligence Issue Board _-by milestone_**](https://gitlab.com/groups/gitlab-org/-/boards/2774881?scope=all&label_name[]=group%3A%3Aproduct%20intelligence&not[label_name][]=product%20work&not[label_name][]=Technical%20Writing&not[label_name][]=UX)
-* [**Product Intelligence Issue Board _-by workflow label_**](https://gitlab.com/groups/gitlab-org/-/boards/3808840?milestone_title=15.0&label_name[]=group%3A%3Aproduct%20intelligence)
+* [**Product Intelligence Issue Board - Current Milestone**](https://gitlab.com/groups/gitlab-org/-/boards/5071664?milestone_title=Started&label_name%5B%5D=group%3A%3Aproduct%20intelligence)
 
 
 ### Prioritization
