--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -36,7 +36,7 @@ Value stream assessments require a non-trivial investment of time by both the Gi
 - We have a strong relationship with an executive sponsor
 - The opportunity has a Net ARR value of over $500k
 - The account has a total addressable market of at least 1000 GitLab users
-- The prospect or customer is focused on improving their software delivery performance
+- The prospect or customer is focused on improving their software delivery performance or related practies (e.g., securing their software supply chain, cloud migrations, application modernization, developer experience and efficiency)
 - We have a relationship with the [economic buyer](https://about.gitlab.com/handbook/sales/meddppicc/#economic-buyer)
 - We have identified and established a relationship with the [champion](https://about.gitlab.com/handbook/sales/meddppicc/#champion)
 - We suggest pitching a Value Stream Assessment prior to POVs (Proof of Value) to understand bottlenecks, key metrics important to stakeholder. This also gives us an opportunity to agree to the success criterias before starting the POV as value drivers for deal closure.
@@ -49,6 +49,9 @@ Key indicators that the opportunity is well-suited include:
     - Deliver a new critical application to the market
     - Transform or objectively improve their ability to deliver software
     - Modernize their DevOps capabilities
+    - Migration to the cloud
+    - Security their software supply chain
+    - Improve developer experience and efficiency
 - The customer is currently using some features of GitLab and is interested in how leveraging more of the platform will drive software delivery outcomes
 - For customer success, a value stream assessment should help uncover opportunities to expand into new use cases or improve current adoption by identifying bottlenecks in the current software delivery value stream
 - An existing customer shows interest in adopting our value stream analytics feature to drive software delivery performance
@@ -57,7 +60,7 @@ The scope of a value stream assessment should always be clearly defined. A clear
 
 ### Education and Commitment
 
-A successful Value Stream Assessment requires a commitment to the workshop by the software delivery stakeholders and the personnel experienced with the various processes that constitute their value stream. Without understanding the assessment process and its value to their organization, key participants will lack the commitment to ensure a successful value stream assessment. Educate the prospect or customer on the benefits, process details, and the required commitment. Leverage the [Value Stream Assessment Pitch Deck](https://docs.google.com/presentation/d/1R8RMrXDIaP9Mz3P0_xcevjDQROtvVpSwtEBJgxdsNbw/edit?usp=sharing) by customizing it for the prospect or customer to assist with this step.
+A successful Value Stream Assessment requires a commitment to the workshop by the software delivery stakeholders and the personnel experienced with the various processes that constitute their value stream. Without understanding the assessment process and its value to their organization, key participants will lack the commitment to ensure a successful value stream assessment. Educate the prospect or customer on the benefits, process details, and the required commitment. Leverage the [Value Stream Assessment Pitch Deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit#slide=id.g1fe818b1ad5_0_0) | ([Recording](https://youtu.be/SCEQvLrObtQ)) by customizing it for the prospect or customer to assist with this step.
 
 _While a Value Stream Assessment is an advanced discovery workshop, it's expected that initial [opportunity discovery](/handbook/sales/playbook/discovery/) and [technical discovery](/handbook/customer-success/solutions-architects/processes/technical-discovery/) have been conducted._
 
@@ -110,7 +113,7 @@ The initial customer pitch allows us to pitch value stream assesment to our key 
 It is important to identify a project or few projects as next step for the planning meeting with customer.
 
 Here are some resources that can be used as starting point for the pitch:  
-[Customer pitch deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit?usp=sharing)  
+[Customer pitch deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit?usp=sharing) | ([Recording](https://youtu.be/SCEQvLrObtQ))
 [Internal pitch deck](https://docs.google.com/presentation/d/1kWqXBbBC2BZ1w9dWEUe4hVJdcXMcO6tXNK9dFY-5XF0/edit#slide=id.gef34d4c13c_1_636)  
 
 
