Add abuse mainteance link to anti-abuse page

--- a/development/data-science/anti-abuse/index.html.md.erb
+++ b/development/data-science/anti-abuse/index.html.md.erb
@@ -121,6 +121,10 @@ We have a weekly team sync meeting with rotating [EMEA/AMER](https://drive.googl
 
 We have a weekly refinement session Friday 00:00 UTC.
 
+## Abuse Maintenance
+
+The Anti-abuse team works closely with Trust and Safety to mitigate abuse on our platform. It's not uncommon for Trust and safety to [request features or maintenance](https://gitlab.com/gitlab-org/modelops/anti-abuse/team-tasks/-/issues/new?issuable_template=abuse_maintenance) from our team to assist their effort of mitigating abuse.
+
 ## Pipeline Validation Service responsibility
 
 [PVS](https://gitlab.com/gitlab-org/modelops/anti-abuse/pipeline-validation-service) is an internal service that belongs to the Anti-abuse team. It’s a combination of heuristic-based (text matching, etc) and behavior-based rules (duplicate builds, etc). The [Trust and Safety team](https://about.gitlab.com/handbook/security/security-operations/trustandsafety/) leverages this service the most, and acts as the customer for feature requests.
