Fixed formatting for pitch recordings

--- a/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
+++ b/customer-success/solutions-architects/sa-practices/value-stream-assessments/index.html.md.erb
@@ -60,7 +60,7 @@ The scope of a value stream assessment should always be clearly defined. A clear
 
 ### Education and Commitment
 
-A successful Value Stream Assessment requires a commitment to the workshop by the software delivery stakeholders and the personnel experienced with the various processes that constitute their value stream. Without understanding the assessment process and its value to their organization, key participants will lack the commitment to ensure a successful value stream assessment. Educate the prospect or customer on the benefits, process details, and the required commitment. Leverage the [Value Stream Assessment Pitch Deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit#slide=id.g1fe818b1ad5_0_0) | ([Recording](https://youtu.be/SCEQvLrObtQ)) by customizing it for the prospect or customer to assist with this step.
+A successful Value Stream Assessment requires a commitment to the workshop by the software delivery stakeholders and the personnel experienced with the various processes that constitute their value stream. Without understanding the assessment process and its value to their organization, key participants will lack the commitment to ensure a successful value stream assessment. Educate the prospect or customer on the benefits, process details, and the required commitment. Leverage the [Value Stream Assessment Pitch Deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit#slide=id.g1fe818b1ad5_0_0) - ([Recording](https://youtu.be/SCEQvLrObtQ)) by customizing it for the prospect or customer to assist with this step.
 
 _While a Value Stream Assessment is an advanced discovery workshop, it's expected that initial [opportunity discovery](/handbook/sales/playbook/discovery/) and [technical discovery](/handbook/customer-success/solutions-architects/processes/technical-discovery/) have been conducted._
 
@@ -113,8 +113,8 @@ The initial customer pitch allows us to pitch value stream assesment to our key 
 It is important to identify a project or few projects as next step for the planning meeting with customer.
 
 Here are some resources that can be used as starting point for the pitch:  
-[Customer pitch deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit?usp=sharing) | ([Recording](https://youtu.be/SCEQvLrObtQ))
-[Internal pitch deck](https://docs.google.com/presentation/d/1kWqXBbBC2BZ1w9dWEUe4hVJdcXMcO6tXNK9dFY-5XF0/edit#slide=id.gef34d4c13c_1_636)  
+- [Customer pitch deck](https://docs.google.com/presentation/d/1EzPC1dI5DKoyTdI4ZUVnd3GExtAaYjxR2wHKPD-FWnw/edit?usp=sharing) - ([Recording](https://youtu.be/SCEQvLrObtQ))
+- [Internal pitch deck](https://docs.google.com/presentation/d/1kWqXBbBC2BZ1w9dWEUe4hVJdcXMcO6tXNK9dFY-5XF0/edit#slide=id.gef34d4c13c_1_636)  
 
 
 ### Planning meeting with customer
