--- a/development/data-science/anti-abuse/index.html.md.erb
+++ b/development/data-science/anti-abuse/index.html.md.erb
@@ -123,7 +123,7 @@ We have a weekly refinement session Friday 00:00 UTC.
 
 ## Abuse Maintenance
 
-The Anti-abuse team works closely with Trust and Safety to mitigate abuse on our platform. It's not uncommon for Trust and safety to [request features or maintenance](https://gitlab.com/gitlab-org/modelops/anti-abuse/team-tasks/-/issues/new?issuable_template=abuse_maintenance) from our team to assist their effort of mitigating abuse.
+The Anti-abuse team works closely with [Trust and Safety](/handbook/security/security-operations/trustandsafety/) to mitigate abuse on our platform. It's not uncommon for Trust and safety to [request features or maintenance](https://gitlab.com/gitlab-org/modelops/anti-abuse/team-tasks/-/issues/new?issuable_template=abuse_maintenance) from our team to assist their effort of mitigating abuse.
 
 ## Pipeline Validation Service responsibility
 
