--- a/development/dev/create/editor/index.html.md.erb
+++ b/development/dev/create/editor/index.html.md.erb
@@ -293,10 +293,10 @@ It is advised to manually transition issues from one label to another and not us
 
 ### 😷 Issue Workflow Hygiene
 
-In the Create:Editor team we leverage an automatic issue hygiene system via the [triage bot](https://gitlab.com/gitlab-org/quality/triage-ops/-/tree/master/policies/groups/gitlab-org/editor). This helps to ensure issues and label hygieneare respected, currently our rules are:
+In the Create:Editor team we leverage an automatic issue hygiene system via the [triage bot](https://gitlab.com/gitlab-org/quality/triage-ops/-/tree/master/policies/groups/gitlab-org/editor). This helps to ensure issues and label hygiene are respected, currently our rules are:
 
-- If a issue is assigned the "ready for development" label but has no technical labels, they are assigned automatically and a member of the team is pigned to verify the issue.
-- If an issue is asigned the "verification" label a team memeber is pinged and asked to review it so that the issue can be closed.
+- If a issue is assigned the "ready for development" label but has no technical labels, they are assigned automatically and a member of the team is pinged to verify the issue.
+- If an issue is assigned the "verification" label a team member is pinged and asked to review it so that the issue can be closed.
 
 ### 🏋️‍♂️ Capacity planning
 
@@ -314,7 +314,7 @@ We on the Editor team weight issues by leveraging the [Fibonacci Sequence](https
 
 - Weight 1: Really simple and small (for example, changing copy text or 1-2 lines of CSS). Most of these issues should have a `good for new contributors` and/or `Hackathon - Candidate` label attached.
 - Weight 2: Straightforward, but involves updating actual behavior (for example, fixing and testing a trivial bug).
-- Weight 3: Straightforward, but involves possible discovery or unforseen complexity (for example, fixing and testing a non-trivial bug).
+- Weight 3: Straightforward, but involves possible discovery or unforeseen complexity (for example, fixing and testing a non-trivial bug).
 - Weight 5: Changing the behavior of pre-existing modules, or adding significant new behavior (for example, making the Web IDE left-sidebar collapsible).
 - Weight 8: Large fundamental rewrite and should be investigated via a _Architecture Plan_ and _Iteration Plan_ for a more iterative approach. 
 
