Add Customer Strategy Planning to SA processes

--- a/customer-success/solutions-architects/processes/index.html.md.erb
+++ b/customer-success/solutions-architects/processes/index.html.md.erb
@@ -40,6 +40,27 @@ Solutions Architects record all customer and prospect activity to promote **tran
 
 We have a [standard meeting notes document](https://docs.google.com/document/d/1TlG1ZDKtd3YcV_yZg9YxQ52HRxNCpYXJLyDblxBz-vU/edit?usp=sharing) that is formatted to enable the activity capture in Troops which should be utilised for each customer engagement
 
+## Customer Strategy Planning
+
+A customer Strategy Plan is a customer-facing and mutually agreed roadmap for achieving value through GitLab adoption. This is an outcome of collaboration between GitLab Solution Architecture and the customer with the primary objective of ensuring customers are successful.  The process is designed to support shifting from product scoped conversations (focusing on specific features or functions and limited to a specific subset of DevSecOps stages) towards solution (addressing specific pain points) or strategic (shaping business outcomes through holistic organizational process innovation and transformation tied to top strategic initiatives ) scopes. This Strategy Plan starts in the pre-sales process and is intended to carry through to the post-sales [Success Plan](/handbook/customer-success/csm/success-plans/). The customer Success Plan is intended to be dynamic and should therefore be regularly reviewed on an agreed-upon cadence.
+
+Customer Strategy Planning core goal is to identify:
+- Key business stakeholders
+- High-impact strategic requirements
+- Current state of customer technology ecosystem
+- Current and desired capabilities
+- Operational alignment with strategic objectives 
+- Perceived gaps and deficiencies in current capabilities.
+
+Customer Strategy Planning process:
+1. Solutions Architect assigned to the Account will initiate the process during customer technical discovery (Stage 3 - Technical Evaluation) and will remain the DRI
+1. Solution Architect will utilize [standard template](https://docs.google.com/presentation/d/1npyhUebp68YkccLlJP5R_6gmtQjfELpB1mBGWfroVmY/edit#slide=id.g1f06a8a4d73_0_501) to capture all necessary information in a collaborative session with the customer
+1. Where applicable, Solution Architect will engage other functions (CSM, Professional Services) towards the end of technical evaluation 
+1. Solution Architect will share the results with the customer
+1. Account Team and the customer will agree on the cadence for reviewing and updating the Strategy Plan during and after the sales cycle
+1. The customer Strategy Plan will be shared with the CSM team when the account moves into Post-Sales.
+
+
 ## Positioning Professional Services
 
 Solutions Architects should be pitching professional services at every qualified customer opportunity due to long term customer sucess and growth. Please use this [deck](https://docs.google.com/presentation/d/1pXPE84FAv4zhFBwwM7cSy0WbhjUeJ7mrbp1PPjxLBaA/edit#slide=id.g122779ad4b2_0_0) and [rubric](https://docs.google.com/presentation/d/1pXPE84FAv4zhFBwwM7cSy0WbhjUeJ7mrbp1PPjxLBaA/edit#slide=id.g122779ad4b2_0_0) to familirize yourself with the catalog listed [here](https://about.gitlab.com/services/catalog/).
