Added secrets management and CI variables to Pipeline Security

--- a/development/ops/verify/pipeline-security/index.html.md.erb
+++ b/development/ops/verify/pipeline-security/index.html.md.erb
@@ -285,6 +285,23 @@ We want to create a welcoming environment for everyone who is interested in cont
 
 If an issue is being resolved in a merge request that is made by a [community contributor](https://about.gitlab.com/community/contribute/), the engineering manager will assign the associated issue to themselves to keep better track of it. The engineering manager will help to coach the community contributor through the merge request process, or be responsible for delegating that coaching to a team member engineer.
 
+
+### Labels
+
+#### Category Labels
+
+The Pipeline Security group supports the product marketing categories described below:
+
+| Label                 | |  | | |
+| ----------------------| -------| ----|------------| ---|
+| `Category:Secrets Management` | [Issues](https://gitlab.com/groups/gitlab-org/-/issues?sort=created_date&state=opened&label_name[]=Category:Secrets+Management) | [MRs](https://gitlab.com/gitlab-org/gitlab/-/merge_requests?scope=all&state=opened&label_name[]=Category%3ASecrets%20Management) | [Direction](https://about.gitlab.com/direction/verify/secrets_management/) | [Documentation](https://docs.gitlab.com/ee/ci/secrets/index.html) |
+
+#### Feature Labels
+
+| Label                 | |  | Description |
+| ----------------------| -------| ----|------------|
+| `CI variables` | [Issues](https://gitlab.com/gitlab-org/gitlab/-/issues/?sort=popularity&state=opened&label_name%5B%5D=CI%20variables) | [MRs](https://gitlab.com/gitlab-org/gitlab/-/merge_requests?scope=all&state=opened&label_name[]=CI%20variables) | Relates to functionality surrounding pre-defined and user-defined variables available in the Build environment. Formerly `~ci variables` |
+
 ### Meetings
 
 #### Pipeline Security Group Weekly Meeting
